// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board displays 3x3 set of squares 1`] = `
<div
  class="game-board"
>
  <div
    class="board-row"
  >
    <button
      class="square"
    />
    <button
      class="square"
    />
    <button
      class="square"
    />
  </div>
  <div
    class="board-row"
  >
    <button
      class="square"
    />
    <button
      class="square"
    />
    <button
      class="square"
    />
  </div>
  <div
    class="board-row"
  >
    <button
      class="square"
    />
    <button
      class="square"
    />
    <button
      class="square"
    />
  </div>
</div>
`;

exports[`Board passes values of squares to squares 1`] = `
<div
  class="game-board"
>
  <div
    class="board-row"
  >
    <button
      class="square"
    >
      X
    </button>
    <button
      class="square"
    >
      O
    </button>
    <button
      class="square"
    >
      X
    </button>
  </div>
  <div
    class="board-row"
  >
    <button
      class="square"
    >
      X
    </button>
    <button
      class="square"
    >
      O
    </button>
    <button
      class="square"
    >
      X
    </button>
  </div>
  <div
    class="board-row"
  >
    <button
      class="square"
    >
      O
    </button>
    <button
      class="square"
    >
      X
    </button>
    <button
      class="square"
    >
      O
    </button>
  </div>
</div>
`;
